# washingtondc

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md  README.org  TODO  bullshit.txt  configure
src/: BiosFile.c  BiosFile.cpp  BiosFile.h  BiosFile.hpp  CMakeLists.txt  Debugger.cpp  Debugger.hpp  Dreamcast.cpp  Dreamcast.hpp  GdbStub.cpp  GdbStub.hpp  Memory.cpp  Memory.hpp  MemoryMap.c  MemoryMap.cpp  MemoryMap.h  MemoryMap.hpp  SerialServer.cpp  SerialServer.hpp  avl.h  cdrom.h  config.c  config.h  config_file.c  config_file.h  cpu.h  dc_sched.c  dc_sched.cpp  dc_sched.h  dc_sched.hpp  debugger.c  debugger.h  deep_syscall_trace.c  deep_syscall_trace.h  dreamcast.c  dreamcast.h  error.c  error.h  fifo.h  flash_memory.c  (+46 more)
src/arch/: arch_fpu.h  arch_fpu.hpp
src/arch/x86_64/: arch_fenv.h  arch_fenv.hpp  fegetround.cpp  fesetround.cpp
src/cmd/: cmd.c  cmd.h  cmd_sys.c  cmd_sys.h  cmd_tcp_link.c  cmd_tcp_link.h  cmd_thread.c  cmd_thread.h  cons.c  cons.h
src/common/: BaseException.hpp  atomics.h  compiler_bullshit.h  i_hate_windows.h  intmath.h  paths.hpp  real_ticks.h  stdio_hostfile.hpp  threading.h  washdc_getopt.c  washdc_getopt.h
src/common/frontend_io/: gdb_stub.cpp  gdb_stub.hpp  io_thread.cpp  io_thread.hpp  serial_server.cpp  serial_server.hpp  washdbg_core.cpp  washdbg_core.hpp  washdbg_tcp.cpp  washdbg_tcp.hpp
src/dbg/: debugger.c  debugger.h  washdbg_core.c  washdbg_core.h
src/gfx/: geo_buf.c  geo_buf.h  geo_buf_serial.c  geo_buf_serial.h  gfx.c  gfx.h  gfx_config.c  gfx_config.h  gfx_il.h  gfx_obj.c  gfx_obj.h  gfx_tex_cache.c  gfx_tex_cache.h  gfx_thread.c  gfx_thread.h  rend_common.c  rend_common.h
src/gfx/opengl/: opengl_output.c  opengl_output.h  opengl_renderer.c  opengl_renderer.h  opengl_target.c  opengl_target.h  overlay.c  overlay.h  pvr2_ta_frag.glsl  pvr2_ta_vert.glsl  shader.h
src/glfw/: control_bind.c  control_bind.h  window.c  window.h
src/hw/: boot_rom.c  boot_rom.h  flash_mem.c  flash_mem.h
src/hw/aica/: aica.c  aica.h  aica_channel.c  aica_channel.h  aica_common.c  aica_common.h  aica_dsp.c  aica_dsp.h  aica_reg.c  aica_reg.cpp  aica_reg.h  aica_reg.hpp  aica_rtc.c  aica_rtc.cpp  aica_rtc.h  aica_rtc.hpp  aica_wave_mem.c  aica_wave_mem.cpp  aica_wave_mem.h  aica_wave_mem.hpp
src/hw/arm7/: arm7.c  arm7.h
src/hw/g1/: g1.hpp  g1_reg.c  g1_reg.cpp  g1_reg.h  g1_reg.hpp
src/hw/g2/: g2_reg.c  g2_reg.cpp  g2_reg.h  g2_reg.hpp  modem.c  modem.cpp  modem.h  modem.hpp
src/hw/gdrom/: gdrom.c  gdrom.h  gdrom_reg.c  gdrom_reg.cpp  gdrom_reg.h  gdrom_reg.hpp
src/hw/maple/: maple.c  maple.h  maple_controller.c  maple_controller.h  maple_device.c  maple_device.h  maple_reg.c  maple_reg.cpp  maple_reg.h  maple_reg.hpp
src/hw/pvr2/: framebuffer.c  framebuffer.h  geo_buf.c  geo_buf.h  pvr2.c  pvr2.h  pvr2_core_reg.c  pvr2_core_reg.cpp  pvr2_core_reg.h  pvr2_core_reg.hpp  pvr2_gfx_obj.c  pvr2_gfx_obj.h  pvr2_reg.c  pvr2_reg.cpp  pvr2_reg.h  pvr2_reg.hpp  pvr2_ta.c  pvr2_ta.h  pvr2_tex_cache.c  pvr2_tex_cache.h  pvr2_tex_mem.c  pvr2_tex_mem.cpp  pvr2_tex_mem.h  pvr2_tex_mem.hpp  pvr2_yuv.c  pvr2_yuv.h  spg.c  spg.cpp  spg.h  spg.hpp
src/hw/sh4/: Icache.cpp  Icache.hpp  Makefile  Memory.cpp  Memory.hpp  Ocache.cpp  Ocache.hpp  main.cpp  sh4.c  sh4.cpp  sh4.h  sh4.hpp  sh4_disas.c  sh4_disas.h  sh4_dmac.c  sh4_dmac.h  sh4_excp.c  sh4_excp.cpp  sh4_excp.h  sh4_excp.hpp  sh4_icache.c  sh4_inst.c  sh4_inst.cpp  sh4_inst.h  sh4_inst.hpp  sh4_jit.c  sh4_jit.h  sh4_mem.c  sh4_mem.cpp  sh4_mem.h  sh4_mem.hpp  sh4_mmu.c  sh4_mmu.cpp  sh4_mmu.h  sh4_mmu.hpp  sh4_ocache.c  sh4_ocache.cpp  sh4_ocache.h  sh4_ocache.hpp  sh4_read_inst.h  (+18 more)
src/hw/sys/: holly_intc.c  holly_intc.cpp  holly_intc.h  holly_intc.hpp  sys_block.c  sys_block.cpp  sys_block.h  sys_block.hpp
src/io/: cmd_tcp.c  cmd_tcp.h  gdb_stub.c  gdb_stub.h  io_thread.c  io_thread.h  serial_server.c  serial_server.h  washdbg.c  washdbg.h  washdbg_core.c  washdbg_core.h  washdbg_tcp.c  washdbg_tcp.h
src/jit/: code_block.c  code_block.h  code_cache.c  code_cache.h  jit.c  jit.h  jit_determ.c  jit_il.c  jit_il.h  jit_mem.c  jit_mem.h
src/jit/jit_intp/: code_block_intp.c  code_block_intp.h
src/jit/x86_64/: abi.h  code_block_x86_64.c  code_block_x86_64.h  emit_x86_64.c  emit_x86_64.h  exec_mem.c  exec_mem.h  native_dispatch.c  native_dispatch.h  native_mem.c  native_mem.h
src/libwashdc/: CMakeLists.txt  MemoryMap.c  area0.c  area0.h  area1.c  area1.h  area4.c  area4.h  avl.h  buildconfig.c  cdi.c  cdi.h  cdrom.c  cdrom.h  chd.c  chd.h  config.c  config.h  config_file.c  config_file.h  dc_sched.c  dc_sched.h  deep_syscall_trace.c  deep_syscall_trace.h  dreamcast.c  dreamcast.h  elf.c  error.c  error.h  fifo.h  gameconsole.c  gdi.c  gdi.h  intmath.h  load_elf.h  log.c  log.h  mem_areas.h  mem_code.h  memory.c  (+18 more)
src/libwashdc/cmd/: cmd_sys.c  cmd_tcp_link.c  cons.c
src/libwashdc/dbg/: debugger.c  washdbg_core.c  washdbg_core.h
src/libwashdc/gfx/: gfx.c  gfx.h  gfx_config.c  gfx_config.h  gfx_il.h  gfx_obj.h  rend_common.c  rend_common.h
src/libwashdc/glfw/: control_bind.c  window.c
src/libwashdc/hw/: boot_rom.c  boot_rom.h  flash_mem.c  flash_mem.h
src/libwashdc/io/: cmd_tcp.c  gdb_stub.c  gdb_stub.h  io_thread.c  serial_server.c  washdbg_tcp.c  washdbg_tcp.h
src/libwashdc/jit/: code_block.c  code_block.h  code_cache.c  code_cache.h  defs.h  jit.c  jit.h  jit_il.c  (+10 more)
src/sound/: sound.c  sound.h
src/video/: framebuffer.c
src/washdc/: CMakeLists.txt  MemoryMap.h  config.h  dreamcast.c  fifo.h  hostfile.h  ring.h  screenshot.c  washdc.c
src/washdc-headless/: CMakeLists.txt  console_config.cpp  console_config.hpp  gfx_null.cpp  gfx_null.hpp  gfx_obj.c  hostfile.hpp  main.cpp
src/washingtondc/: CMakeLists.txt  config_file.c  config_file.h  console_config.cpp  console_config.hpp  control_bind.cpp  control_bind.hpp  gfx_obj.h  hostfile.hpp  main.c  main.cpp  rend_if.hpp  renderer.h  sdl_gamecontrollerdb.h  shader.c  shader.h  shader_cache.h  sound.cpp  sound.hpp  washingtondc.hpp  window.cpp  window.hpp
src/win/: win_thread.c  win_thread.h
(+392 files in other folders)
